@@ -218,6 +218,22 @@ if test x$MAIL_PROG=x; then
 fi
 AC_SUBST(MAIL_PROG)
 
+dnl Check for location of mail program
+HTTP_CONF=no
+AC_ARG_WITH(httpd_conf,--with-httpd-conf=<path_to_conf> sets path to Apache conf.d directory,HTTPD_CONF=$withval,HTTPD_CONF=no) 
+if test HTTPD_CONF=no; then
+	if test -d /etc/httpd/conf.d; then
+		HTTPD_CONF="/etc/httpd/conf.d"
+	elif test -d /etc/apache2/conf.d; then
+		HTTPD_CONF="/etc/apache2/conf.d"
+	elif test -d /etc/apache/conf.d; then
+		HTTPD_CONF="/etc/apache/conf.d"
+	else
+		HTTPD_CONF="/etc/httpd/conf.d"
+	fi
+fi 
+AC_SUBST(HTTPD_CONF)
+
 dnl Check for location of init scripts
 init_dir=/etc/rc.d/init.d
 if test -d /etc/rc.d/init.d; then
@@ -784,6 +800,8 @@ fi
 AC_MSG_RESULT([        Install \${prefix}:  $prefix])
 AC_MSG_RESULT([                Lock file:  $lockfile])
 AC_MSG_RESULT([           Init directory:  $init_dir])
+AC_MSG_RESULT([  Apache conf.d directory:  $HTTPD_CONF])
+AC_MSG_RESULT([             Mail program:  $MAIL_PROG])
 AC_MSG_RESULT([                  Host OS:  $host_os])
 
 echo ""
